--- a/app/templates/user_signin.html
+++ b/app/templates/user_signin.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
 	<div class="page-header">
-		<h2 style="margin: 50px">Create account for new user</h2>
+		<h2 style="margin: 50px">Create an account for a new user</h2>
     </div>
     <form method="POST">
         {{ wtf.quick_form(form) }}
