--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="page-header">
         <h1>You're lost</h1>
-        <h1>This is not the page you are looking for</h1>
+        <h1>This is not the page you are looking for, look at this cute puppy</h1>
         <img src={{ url_for ("static", filename="puppy.jpg") }}>
     </div>
 </div>
