--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand">Menu </a>
     <a class="nav-link active" href={{ url_for("scan_products") }}>Catalog<span class="sr-only">(current)</span></a>
-    <a class="nav-link" href={{ url_for("get_products") }}>Admin</a>
+    <a class="nav-link" href={{ url_for("login") }}>Admin</a>
     <a class="nav-link" href={{ url_for("get_users") }}>User Sign-In</a>
     
     <form class="form-inline">
