--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,8 +5,10 @@
 	<div class="page-header">
 		<h2 style="margin: 50px">Enter password for admin access:</h2>
     </div>
-    <form method="POST">
-        {{ wtf.quick_form(form) }}
-   </form>
+    <form action="" method="post">
+       <input type="password" placeholder="Password" name="password" value="{{
+        request.form.password }}">
+      <input class="btn btn-default" type="submit" value="Login">
+    </form>
 </div>
 {% endblock %}
